objects/FileUploadToGoalEvent__e.object
<CustomObject>
    <fields>
        <fullName>JobId__c</fullName>
        <label>JobId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfRecords__c</fullName>
        <label>NumberOfRecords</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Count_of_Failure_Record__c</fullName>
        <label>Count of Failure Record</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Count_of_Success_Record__c</fullName>
        <label>Count of Success Record</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FileUploadToGoalEvent</label>
    <pluralLabel>FileUploadToGoalEvents</pluralLabel>
</CustomObject>